# cpp-oop-vs-dod

./: .gitignore  CMakeLists.txt  Node.cpp  Node.h  benchmark-array.cpp  benchmark-main.cpp  main.cpp  simple_benchmark.cpp
include/: utils.h
include/benchmark/: benchmark-array.hpp  benchmark-branching.hpp
